fix(#4049): popover should have overflow: hidden with forced-colors: active
Per https://github.com/adobe/react-spectrum/pull/4050#pullrequestreview-1298668223

--- a/packages/@adobe/spectrum-css-temp/components/popover/index.css
+++ b/packages/@adobe/spectrum-css-temp/components/popover/index.css
@@ -144,3 +144,9 @@ governing permissions and limitations under the License.
     margin-left: calc(var(--spectrum-global-dimension-size-150) * -1);
   }
 }
+
+@media (forced-colors: active) {
+  .spectrum-Popover {
+    overflow: hidden;
+  }
+}
